--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav>
-        <img src="Images/logof.png" id="logo">
+        <img src="Images/logo.png" id="logo">
     </nav>
 </body>
 </html>
