--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <nav>
         <img src="Images/logo.png" id="logo">
-        <span id="title">Project - VD</span>
     </nav>
 
-    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis maiores delectus deserunt laudantium deleniti est minus necessitatibus repudiandae suscipit aliquam dolorem sapiente totam temporibus sint nesciunt fugiat, recusandae harum labore.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ea possimus impedit deserunt fuga sint optio provident error in dolores voluptate aliquid nostrum autem aliquam omnis, voluptatibus, laboriosam tempore sit?
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe assumenda ipsa harum molestias suscipit! Dolore dolores eos beatae voluptatibus ducimus excepturi assumenda, cupiditate maiores provident blanditiis perspiciatis inventore quaerat architecto!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae optio, odit perspiciatis, error sunt a voluptatum voluptate autem cupiditate quas soluta modi fuga laborum dolores libero eaque voluptatem, fugiat voluptas.
+    <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis maiores delectus deserunt laudantium deleniti est minus necessitatibus repudiandae suscipit aliquam dolorem sapiente totam temporibus sint nesciunt fugiat, recusandae harum labore.
+        </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ea possimus impedit deserunt fuga sint optio provident error in dolores voluptate aliquid nostrum autem aliquam omnis, voluptatibus, laboriosam tempore sit?
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe assumenda ipsa harum molestias suscipit! Dolore dolores eos beatae voluptatibus ducimus excepturi assumenda, cupiditate maiores provident blanditiis perspiciatis inventore quaerat architecto!
+        </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae optio, odit perspiciatis, error sunt a voluptatum voluptate autem cupiditate quas soluta modi fuga laborum dolores libero eaque voluptatem, fugiat voluptas.
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque hic enim est, totam ab suscipit ad nam. Quia maxime molestiae voluptatem earum recusandae, architecto libero? Impedit, repellendus! Ullam, harum possimus!
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum soluta doloribus quisquam. Facilis et, omnis tempora dicta asperiores ad accusantium modi ut, excepturi quod doloribus amet, incidunt provident voluptates repellat?
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis esse, odit nihil veritatis quasi ad ducimus, voluptates ab et at enim expedita consectetur omnis eaque vitae hic sed tempora laboriosam?
