--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     <nav>
         <img src="Images/logo.png" id="logo">
+        <div id="title">PROJECT - VD</div>
     </nav>
-
+        
     <div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis maiores delectus deserunt laudantium deleniti est minus necessitatibus repudiandae suscipit aliquam dolorem sapiente totam temporibus sint nesciunt fugiat, recusandae harum labore.
         </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ea possimus impedit deserunt fuga sint optio provident error in dolores voluptate aliquid nostrum autem aliquam omnis, voluptatibus, laboriosam tempore sit?
